--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 addopts = -rsxXv -q
-norecursedirs = .git _build tmp* build *.egg-info venv
+norecursedirs = .git _build tmp* build *.egg-info venv *.egg
